qdrouterd/deployment/qdrouterd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qdrouterd
  labels:
    app: iot-demo
spec:
  ports:
  - name: amqps
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    name: qdrouterd
