qdrouterd/deployment/qdrouterd-route.yml
apiVersion: v1
kind: Route
metadata:
  name: qdrouterd-route 
spec:
  to:
    kind: Service
    name: qdrouterd
  port:
    targetPort: amqps
  tls:
    termination: passthrough
